hphp/hack/test/typecheck/function_call_targ_illformed.php.exp
File "function_call_targ_illformed.php", line 8, characters 7-9:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "function_call_targ_illformed.php", line 3, characters 7-9:
  Definition is here
File "function_call_targ_illformed.php", line 8, characters 3-12:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "function_call_targ_illformed.php", line 5, characters 10-12:
  Definition is here
